<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="email_address_text">Email address</string>
    <string name="sign_up_text">Sign up</string>
    <string name="welcome_heading">Welcome!</string>
    <string name="welcome_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="next_button">Next</string>
    <string name="instructions_text">Add shoes to your listings page and view them when you wanna</string>
    <string name="begin_text">Begin</string>
    <string name="instructions_heading">Instructions</string>
    <string name="add_shoe_detail">Add shoe detail</string>
    <string name="shoe_comapny_hint">shoe comapny</string>
    <string name="shoe_name_hint">shoe name</string>
    <string name="shoe_size_hint">shoe size</string>
    <string name="shoe_description_hint">shoe description</string>
</resources>
